# lucy

./: .gitignore  .travis.yml  Build.PL  CHANGES  CONTRIBUTING  INSTALL  KEYS  LICENSE  NOTICE  README  STATUS  app.c  appveyor.yml  core.c  core.h  module.c  module.h
boilerplater/t/: 000-load.t  001-util.t  051-symbol.t  100-type.t  101-primitive_type.t  102-integer_type.t  104-void_type.t  105-object_type.t  107-arbitrary_type.t  108-composite_type.t  200-function.t  201-method.t  202-overridden_method.t  203-final_method.t  400-class.t  402-parcel.t  500-hierarchy.t  600-parser.t
c/: .gitignore  INSTALL  INSTALL.md  Makefile.am  README  bootstrap.sh  cfc_header  configure  configure.ac  configure.bat  install-sh  install.sh  liblucy-config.in  liblucy.pc.in  lucy.pc.in
c/sample/: getting_started.c  indexer.c  indexer_simple.c  search.c  search_simple.c
c/src/: CFBind.h  Makefile.am  liblucy.c  lucy-test.c  test.sh
c/src/Clownfish/: Err.c  LockFreeRegistry.c  Obj.c  VTable.c
c/src/Lucy/Analysis/: RegexTokenizer.c
c/src/Lucy/Document/: Doc.c
c/src/Lucy/Index/: DocReader.c  Inverter.c
c/src/Lucy/Object/: Host.c  LockFreeRegistry.c  VTable.c
c/t/: 000-sanity-check.t.c  Makefile.am  lcov.sh  test.sh  test_lucy.c
c_src/compat/: win32lfs.c  win32lfs.h
charmonizer/: .gitignore  Makefile  Makefile.MSVC  Makefile.MinGW  Makefile.win  README  base.POSIX.mk  base.win.mk  charm_test.c  charmonize.c
charmonizer/buildbin/: meld.pl
charmonizer/metaquote/: metaquote.c
charmonizer/metaquote_src/: metaquote.c
charmonizer/modules/: end.charm  integers.charm  start.charm
charmonizer/src/: Charmonizer.charm  Charmonizer.harm
clownfish/: .gitignore  Build.PL  MANIFEST  typemap
clownfish/compiler/: .gitignore
clownfish/core/: Clownfish.cfp
clownfish/include/: CFC.h
clownfish/lib/: Boilerplater.pm  Clownfish.pm  Clownfish.xs
clownfish/perl/: Build.PL  MANIFEST  typemap
clownfish/ruby/: Rakefile
clownfish/src/: CFCBase.c  CFCBase.h  CFCBindAliases.c  CFCBindClass.c  CFCBindClass.h  CFCBindCore.c  CFCBindCore.h  CFCBindFile.c  CFCBindFile.h  CFCBindFunction.c  CFCBindFunction.h  CFCBindMethod.c  CFCBindMethod.h  CFCCBlock.c  CFCCBlock.h  CFCClass.c  CFCClass.h  CFCDocuComment.c  CFCDocuComment.h  CFCDumpable.c  CFCDumpable.h  CFCFile.c  CFCFile.h  CFCFunction.c  CFCFunction.h  CFCHierarchy.c  CFCHierarchy.h  CFCLexHeader.c  CFCLexHeader.h  CFCLexHeader.l  CFCMemPool.c  CFCMethod.c  CFCMethod.h  CFCParamList.c  CFCParamList.h  CFCParcel.c  CFCParcel.h  CFCParseHeader.y  CFCParser.c  CFCParser.h  (+22 more)
clownfish/t/: 000-load.t  001-util.t  050-docucomment.t  051-symbol.t  100-type.t  101-primitive_type.t  102-integer_type.t  103-float_type.t  104-void_type.t  105-object_type.t  106-va_list_type.t  107-arbitrary_type.t  108-composite_type.t  200-function.t  201-method.t  202-overridden_method.t  203-final_method.t  300-variable.t  301-param_list.t  400-class.t  401-c_block.t  402-parcel.t  403-file.t  500-hierarchy.t  600-parser.t
common/: charmonizer.c  charmonizer.main
core/: Clownfish.c  Lucy.c  Lucy.cfp  TestClownfish.c  TestClownfish.cfp  TestLucy.c  TestLucy.cfp
core/Clownfish/: ByteBuf.c  ByteBuf.cfh  CharBuf.c  CharBuf.cfh  Err.c  Err.cfh  Hash.c  Hash.cfh  LockFreeRegistry.c  LockFreeRegistry.cfh  Method.c  Method.cfh  Num.c  Num.cfh  Obj.c  Obj.cfh  Test.c  Test.cfh  VArray.c  VArray.cfh  VTable.c  VTable.cfh
core/KinoSearch/: Test.c  Test.cfh
core/Lucy/: Simple.c  Simple.cfh  Test.bp  Test.c  Test.cfh
devel/benchmarks/: README.txt  extract_reuters.plx
devel/conf/: astylerc  clownfish.vim  kinoperl.supp  kinotidyrc  lucyperl.supp  rat-excludes
example-lang/: README
example-lang/src/: CFBind.c  CFBind.h  XSBind.h
go/: build.go
go/cfext/: lucy.c
go/lucy/: analysis.go  analysis_test.go  document.go  document_test.go  highlight.go  highlight_test.go  index.go  index_test.go  lucy.go  lucy_test.go  object.go  object_test.go  plan.go  plan_test.go  registry.go  registry_test.go  search.go  search_test.go  simple.go  simple_test.go  store.go  store_test.go  test.go  test_test.go  util.go  util_test.go
go/sample/: getting_started.go
lemon/: .gitignore  Makefile  Makefile.MSVC  Makefile.MinGW  README  lempar.c
perl/: .gitignore  Build.PL  Changes  INSTALL  INSTALL.SKIP  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  README
perl/lib/: .gitignore  KinoSearch.pm  KinoSearch.pod  Lucy.pm  (+1 more)
ruby/: .gitignore  Rakefile  apache_lucy.gemspec
tcl/: Makefile
test/: TestLucy.c  TestLucy.cfp
(+2799 files in other folders)
